# Clawforge

./: .gitignore  ClawForge_Instruction_Manual.md  ClawForge_PPT_Content.md  Major_Project_Report_Content.md  README.md
clawforge/apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
clawforge/apps/api/clawforge/: __init__.py  config.py  main.py
clawforge/apps/api/clawforge/agents/: __init__.py  base.py  claws.py  coder.py  github.py  orchestrator.py  planner.py  refiner.py  router.py
clawforge/apps/api/clawforge/autofixer/: __init__.py  dart_fixer.py  import_fixer.py  missing_file_detector.py  model_fixer.py  pubspec_fixer.py
clawforge/apps/api/clawforge/components/: __init__.py  auth.py  backend.py  library.py  navigation.py  settings.py
clawforge/apps/api/clawforge/dashboard/: __init__.py  metrics.py
clawforge/apps/api/clawforge/github/: __init__.py  client.py
clawforge/apps/api/clawforge/graph/: __init__.py  workflow.py
clawforge/apps/api/clawforge/llm/: __init__.py  client.py
clawforge/apps/api/clawforge/models/: __init__.py  workflow.py
clawforge/apps/api/clawforge/preview/: __init__.py  flutter_preview.py
clawforge/apps/api/clawforge/rag/: __init__.py  flutter_examples.py
clawforge/apps/api/clawforge/storage/: __init__.py  project_store.py
clawforge/apps/api/clawforge/supabase/: __init__.py  auth.py  client.py  database.py
clawforge/apps/api/clawforge/templates/: __init__.py  scaffold.py
clawforge/apps/api/clawforge/validation/: __init__.py  (+1 more)
clawforge/apps/api/project_store/: a0e62d6d9536.json  f0837a27eeae.json
(+66 files in other folders)
