[project]
name = "clawforge-api"
version = "0.1.0"
description = "ClawForge API - AI-powered Flutter app generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "langgraph>=0.2.60",
    "langchain-core>=0.3.28",
    "langchain-anthropic>=0.3.1",
    "anthropic>=0.40.0",
    "httpx>=0.28.1",
    "pygithub>=2.5.0",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "chromadb>=0.5.23",
    "supabase>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.4",
    "mypy>=1.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clawforge"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
